--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "@types/react-dom": "18.2.4",
     "@vercel/postgres": "^0.3.0",
     "autoprefixer": "10.4.14",
-    "drizzle-orm": "^0.25.4",
+    "drizzle-orm": "^0.26.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "next": "13.4.2",
     "postcss": "8.4.23",
+    "postgres": "^3.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/pg": "^8.6.6"
   }
 }
